# sortic

./: CMakeLists.txt  check_sortic.cpp  check_sortic.h  functions_1.cpp  functions_2.cpp  main.cpp  sortic.cpp  start_functions.cpp
Scripts/: parse.cpp  parse.h
Scripts/check_sortic/: check_sortic.h  parse_functions.cpp  sort_functions.cpp  start_functions.cpp
Scripts/colors/: colors.cpp  colors.h
Scripts/rules/: functions_1.cpp  functions_2.cpp  functions_3.cpp  functions_4.cpp  rules.h
Scripts/sortic/: additional_functions.cpp  algorithm_functions.cpp  sortic.h  start_functions.cpp
